--- a/index.html
+++ b/index.html
@@ -3,239 +3,224 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login — Aries</title>
+  <title>Aries — Sign In</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html, body {
-      height: 100%;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #000;
-      color: #fff;
+    :root {
+      --bg: #050505;
+      --fg: #f9fafb;
+      --muted: #9ca3af;
+      --accent: #fafafa;
+      --error: #f97373;
     }
-
+    * { box-sizing: border-box; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+                   "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+    }
     body {
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 16px;
     }
-
-    .shell {
+    .auth-shell {
       width: 100%;
       max-width: 420px;
-      border: 1px solid #333;
-      border-radius: 14px;
+      border-radius: 18px;
+      border: 1px solid #111827;
+      background: #020617;
+      box-shadow:
+        0 28px 60px rgba(0,0,0,0.9),
+        0 0 0 1px rgba(255,255,255,0.02);
       padding: 24px 22px 20px;
-      background: #050505;
-      box-shadow: 0 18px 40px rgba(0,0,0,0.85);
     }
-
-    .brand-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 18px;
-    }
-
     .brand {
-      font-weight: 800;
-      letter-spacing: 0.16em;
-      font-size: 11px;
-      text-transform: uppercase;
-      color: #aaa;
-    }
-
-    .brand-dot {
-      width: 20px;
-      height: 20px;
-      border-radius: 999px;
-      border: 1px solid #555;
       display: flex;
       align-items: center;
-      justify-content: center;
-      font-size: 12px;
-      color: #999;
-    }
-
-    .title {
-      font-size: 22px;
-      font-weight: 800;
-      margin-bottom: 4px;
-      letter-spacing: 0.03em;
-    }
-
-    .subtitle {
-      font-size: 13px;
-      color: #9ca3af;
+      gap: 10px;
       margin-bottom: 18px;
     }
-
+    .brand-mark {
+      width: 32px;
+      height: 32px;
+      border-radius: 999px;
+      border: 1px solid rgba(249,250,251,0.2);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:18px;
+      font-weight:800;
+    }
+    .brand-text-main {
+      font-weight: 800;
+      font-size: 18px;
+      letter-spacing: 0.08em;
+    }
+    .brand-text-sub {
+      font-size: 12px;
+      color: var(--muted);
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+    }
+    .headline {
+      margin: 0 0 4px 0;
+      font-size: 22px;
+      font-weight: 700;
+    }
+    .subheadline {
+      margin: 0 0 18px 0;
+      font-size: 13px;
+      color: var(--muted);
+    }
     .mode-toggle {
       display: inline-flex;
-      align-items: center;
       border-radius: 999px;
-      border: 1px solid #333;
       padding: 2px;
-      margin-bottom: 18px;
-      background: #020202;
+      border: 1px solid rgba(148,163,184,0.5);
+      background: #020617;
+      margin-bottom: 16px;
     }
-
-    .mode-btn {
+    .mode-toggle button {
       border: none;
       background: transparent;
-      color: #aaa;
+      color: var(--muted);
       font-size: 12px;
       padding: 6px 12px;
       border-radius: 999px;
       cursor: pointer;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
+      font-weight: 600;
     }
-
-    .mode-btn.active {
-      background: #fff;
-      color: #000;
+    .mode-toggle button.active {
+      background: #f9fafb;
+      color: #020617;
     }
-
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
     label {
-      display: block;
       font-size: 12px;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      color: #9ca3af;
-      margin-bottom: 4px;
-      margin-top: 12px;
+      color: var(--muted);
+      display:block;
+      margin-bottom: 2px;
     }
-
-    input {
+    input[type="email"],
+    input[type="password"] {
       width: 100%;
-      border-radius: 8px;
-      border: 1px solid #333;
-      background: #050505;
-      color: #f9fafb;
-      padding: 10px 11px;
-      font-size: 14px;
+      padding: 9px 10px;
+      border-radius: 9px;
+      border: 1px solid #111827;
+      background: #020617;
+      color: var(--fg);
+      font-size: 13px;
       outline: none;
     }
-
-    input:focus {
-      border-color: #f5f5f5;
-      box-shadow: 0 0 0 1px #f5f5f5;
+    input::placeholder {
+      color: #4b5563;
     }
-
-    .hint {
-      font-size: 11px;
-      color: #6b7280;
+    input:focus {
+      border-color: #e5e7eb;
+    }
+    .error {
+      min-height: 18px;
+      font-size: 12px;
+      color: var(--error);
+      margin-top: 2px;
+    }
+    .submit-row {
       margin-top: 4px;
     }
-
-    .error {
-      margin-top: 10px;
-      font-size: 12px;
-      color: #f97373;
-      min-height: 16px;
-      white-space: pre-line;
-    }
-
-    .info {
-      margin-top: 10px;
-      font-size: 11px;
-      color: #9ca3af;
-    }
-
-    .submit-row {
-      margin-top: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 10px;
-    }
-
     .btn-primary {
-      flex: 1;
+      width: 100%;
       border-radius: 999px;
       border: 1px solid #f9fafb;
       background: #f9fafb;
-      color: #000;
-      font-size: 14px;
+      color: #020617;
+      font-size: 13px;
       font-weight: 700;
-      padding: 9px 14px;
+      padding: 9px 12px;
       cursor: pointer;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap: 8px;
     }
-
     .btn-primary:disabled {
       opacity: 0.6;
       cursor: default;
     }
-
     .loader {
       width: 14px;
       height: 14px;
       border-radius: 999px;
-      border: 2px solid #fff;
-      border-top-color: transparent;
-      animation: spin 0.9s linear infinite;
-      margin-left: 8px;
+      border: 2px solid rgba(15,23,42,0.4);
+      border-top-color: #020617;
+      animation: spin 0.8s linear infinite;
     }
-
-    .footer {
-      margin-top: 16px;
-      font-size: 11px;
-      color: #6b7280;
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    .pill {
-      border-radius: 999px;
-      border: 1px solid #333;
-      padding: 3px 9px;
-      font-size: 10px;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-    }
-
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
-
+    .info {
+      margin-top: 10px;
+      font-size: 11px;
+      color: var(--muted);
+    }
+    .footer {
+      margin-top: 18px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      font-size: 11px;
+      color: #6b7280;
+    }
+    .pill {
+      border-radius:999px;
+      border: 1px solid #111827;
+      padding:3px 8px;
+      font-size:10px;
+      text-transform:uppercase;
+      letter-spacing:0.14em;
+    }
     @media (max-width: 480px) {
-      .shell {
-        padding: 20px 18px 18px;
-      }
-      .title {
-        font-size: 20px;
+      .auth-shell {
+        padding: 20px 16px 16px;
       }
     }
   </style>
 </head>
 <body>
-<div class="shell">
-  <div class="brand-row">
-    <div class="brand">ARIES / ACCESS</div>
-    <div class="brand-dot">A</div>
+<div class="auth-shell">
+  <div class="brand">
+    <div class="brand-mark">A</div>
+    <div>
+      <div class="brand-text-main">ARIES</div>
+      <div class="brand-text-sub">BLACK &amp; WHITE</div>
+    </div>
   </div>
 
-  <div class="title">Sign in to Aries</div>
-  <div class="subtitle" id="modeSubtitle">Use your email and password.</div>
+  <h1 class="headline">Sign in to Aries</h1>
+  <p class="subheadline" id="modeSubtitle">Use your email and password.</p>
 
-  <div class="mode-toggle">
-    <button type="button" id="modeLogin" class="mode-btn active">Sign In</button>
-    <button type="button" id="modeSignup" class="mode-btn">Create</button>
+  <div class="mode-toggle" role="tablist" aria-label="Auth mode">
+    <button type="button" id="modeLogin" class="active" role="tab" aria-selected="true">Sign In</button>
+    <button type="button" id="modeSignup" role="tab" aria-selected="false">Create Account</button>
   </div>
 
   <form id="authForm" novalidate>
-    <label for="email">Email</label>
-    <input id="email" type="email" autocomplete="email" required placeholder="you@example.com">
-    <div class="hint">Use the same email every time to access your account.</div>
-
-    <label for="password">Password</label>
-    <input id="password" type="password" autocomplete="current-password" required placeholder="••••••••">
-    <div class="hint">Minimum 6 characters. Avoid reusing critical passwords.</div>
+    <div>
+      <label for="email">Email</label>
+      <input id="email" type="email" autocomplete="email" placeholder="you@example.com" required />
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input id="password" type="password" autocomplete="current-password" placeholder="••••••••" required />
+    </div>
 
     <div class="error" id="errorBox"></div>
 
@@ -252,7 +237,7 @@
   </form>
 
   <div class="footer">
-    <div class="pill">Black & White Mode</div>
+    <div class="pill">Black &amp; White Mode</div>
     <div>Aries © <span id="year"></span></div>
   </div>
 </div>
@@ -265,7 +250,6 @@
     onAuthStateChanged
   } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
-  // Change this if your home page has a different name
   const REDIRECT_URL = 'home.html';
 
   const yearEl = document.getElementById('year');
@@ -282,7 +266,7 @@
   const submitText = document.getElementById('submitText');
   const submitSpinner = document.getElementById('submitSpinner');
 
-  let mode = 'login'; // 'login' or 'signup'
+  let mode = 'login';
 
   function setMode(newMode) {
     mode = newMode;
@@ -355,7 +339,6 @@
     }
   });
 
-  // If already logged in, go straight to home
   onAuthStateChanged(auth, (user) => {
     if (user) {
       window.location.href = REDIRECT_URL;
